TestSuite/errors/err0523_dive.pas
begin
  var a := (0).div(1,2)
end.